CHANGES
=======

UPDATE: Update Django from 1.11.26 to 1.11.27 due to security vulnerability

3.1.0

UPDATE: perseo url from /m2m/vrules to /rules to affect all rules
UPDATE: Update requests version from 2.21.0 to 2.22.0
UPDATE: Update Uwsgi version from 2.0.17.1 to 2.0.18
UPDATE: Check if cloud_admin user before try to delete rules and subscriptions when delete service (#246)
UPDATE: Makes optional create default groups when create a new domain
UPDATE: Do not delete keystone roles explicitly when delete keystone domain
UPDATE: Adjust uwsgi options: add uwsgi logs and fix max_request to 500 instead of 1000
UPDATE: Increase harakiri uwsgi option to 80 from 40
UPDATE: Adjust orchestrator spec file for RPM (#238)
ADD: API crud for ldap groups (#235)
UPDATE: Use NGSIv2 by orion driver (#232)

3.0.0

FIX: Hardening groups
FIX: Disable log into container file
UPDATE: remove httplib2 and simplejson deps
UPDATE: Add new single roles (ServiceAdmin, ServiceCustomer, SubServiceAdmin, SubServiceCustomer) for each component (Orion, Sth, Perseo, Iotagent)
UPDATE: Update Django from 1.11.23 to 1.11.26
UPDATE: Allow header buffer size customization from execution args. If is not received the default is 4KB
FIX: duplicate multiagent into multisink cygnus option

2.10.0

ADD: Allow subservices names with '#'
UPDATE: Update Django to 1.11.23 due to security vulnerability

2.9.0

FIX: Mongo exception when indexes are created (at service provision) (#214)
UPDATE: Update Django to 1.11.21 due to security vulnerability

2.8.0

UPDATE: Add pylint to travis
UPDATE: Remove empty lines in dockerfile (will be forbidden in future verions of docker)
UPDATE: Orion indexes creation logic aligned with last changes in Orion documentation

2.7.0

UPDATE: Update Djangorestframework to 3.9.4 due to security vulnerability
Add STH mongodb indexes to optimize queries on its collections (#192)
Add TLS option to mailer configuration

2.6.0

ADD: PostGIS cygnus iotmodule